UtahLiveDataTest/src/objects/DrawdownDetail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Drawdown Details</relationshipLabel>
        <relationshipName>Drawdown_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountSpend__c</fullName>
        <label>Amount Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawdown__c</fullName>
        <label>Drawdown</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Drawdown Details</relationshipLabel>
        <relationshipName>Drawdown_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NetAmountThisAction__c</fullName>
        <formula>PaymentRequest__r.NetAmountthisAction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount This Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>PaymentRequest__c</referenceTo>
        <relationshipLabel>Drawdown Details</relationshipLabel>
        <relationshipName>Drawdown_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestAdvanceOrReimburse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Request Advance Or Reimburse</label>
        <referenceTo>RequestAdvanceOrReimburse__c</referenceTo>
        <relationshipLabel>Drawdown Details</relationshipLabel>
        <relationshipName>Drawdown_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project/Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>Drawdown Details</relationshipLabel>
        <relationshipName>Drawdown_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpendPlan__c</fullName>
        <label>Spend Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpendType__c</fullName>
        <formula>PaymentRequest__r.SpendType__c</formula>
        <label>Spend Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Text(Drawdown__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Drawdown Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DDD-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawdown Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>